package com.designpatterns.graph.pattern.struct.adapter.objdapter;

/**
 * @author: jiangjiabin
 * @date: Create in 0:39 2021/11/1
 * @description:
 */
public class Voltage220Src {

    public int output220(){
        return 220;
    }
}
