package com.designpatterns.graph.pattern.struct.adapter.objdapter;

/**
 * @author: jiangjiabin
 * @date: Create in 0:40 2021/11/1
 * @description:
 */
public interface Voltage5Dst {

    int output5();
}
