package com.designpatterns.graph.pattern.struct.facade;

/**
 * @author: jiangjiabin
 * @date: Create in 19:24 2021/11/7
 * @description:
 */
public class Client {
}
